Resolve minor tab highlighting issue; tighten up tab sizing & spacing.

--- a/app.css
+++ b/app.css
@@ -23,7 +23,7 @@ ul {
 }
 
 header {
-    margin-bottom: 5px;
+    margin-bottom: 3px;
 }
 
 .frames {
@@ -144,7 +144,7 @@ header {
 /* Twitter Bootstrap overrides
 ----------------------------------------------------------------------*/
 
-.pills > li { margin-right: 8px;}
+.pills > li { margin-right: 6px; }
 .pills > li > * { float: left; }
 
 .pills > li > a {
@@ -153,6 +153,7 @@ header {
     padding: 0 12px;
     margin: 0 1px 0 0;
     border-radius: 3px;
+    line-height: 26px;
 }
 .pills > li > a.channel,
 .pills > li > a.pm {
@@ -163,7 +164,7 @@ header {
     cursor: pointer;
     background: #e2e2e2 url(images/close.png) no-repeat center center;
     width: 18px;
-    height: 30px;
+    height: 26px;
     border-radius: 0 3px 3px 0;
 }
 
@@ -173,5 +174,7 @@ header {
 
 .pills > li:hover > a,
 .pills > li:hover > .close-frame {
+    color: white;
+    text-shadow: 0;
     background-color: #00438a;
 }
